--- a/bunfig.toml
+++ b/bunfig.toml
@@ -1,3 +1,3 @@
-[install]
+# [install]
 # set default registry as a string
-registry = "https://registry.npm.taobao.org/"
+# registry = "https://registry.npm.taobao.org/"
